--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ torch                 # install correct wheel below
 torchvision
 opencv-python>=4.9.0.80
 numpy>=1.26.0
+dataclasses>=0.6.0
 
 # Visualization & math
 matplotlib>=3.8.0
